feat: implement logic for creating and fetching boards, partial fetching of single board

--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
 	"devDependencies": {
 		"@nuxt/devtools": "latest",
 		"@nuxtjs/supabase": "^0.3.8",
+		"@pinia/nuxt": "^0.4.11",
 		"@types/node": "^18",
 		"mitt": "^3.0.0",
 		"nuxt": "^3.6.5",
+		"pinia": "^2.1.6",
 		"sass": "^1.63.4"
+	},
+	"dependencies": {
+		"uuid": "^9.0.0"
 	}
 }
